--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -57,3 +57,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer base {
+  @font-face {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-display: optional;
+    font-weight: 300 800;
+    src: url(/fonts/OpenSans-VF.woff2) format('woff2-variations');
+  }
+
+  @font-face {
+    font-family: "Open Sans";
+    font-style: italic;
+    font-display: optional;
+    font-weight: 300 800;
+    src: url(/fonts/OpenSans-Italic-VF.woff2) format('woff2-variations');
+  }
+}
